# FastAPI_tutorial

./: .pre-commit-config.yaml  database.py  itproger.db  main.py  models.py  pyproject.toml  schemas.py
